@@ -76,3 +76,12 @@
   align-items: center;
   justify-content: center;
 }
+
+.settings-button-help-text {
+  color: gray;
+  padding-left: 20px;
+  padding-right: 20px;
+
+  margin-bottom: 10px;
+  margin-top: -10px;
+}
